fixed filters visible but not applied on table + checkbox filter spacing

--- a/app/src/assets/style/form.scss
+++ b/app/src/assets/style/form.scss
@@ -52,6 +52,7 @@
   .checkbox {
     &:not(:last-child) {
       padding-right: 32px;
+      margin-bottom: 12px;
       margin-right: 0;
     }
   }
